fix: Flake8, lines too long

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -336,7 +336,9 @@ footer {
 }
 
 #thumb-icon,
-#dropdown-search-icon {
+#dropdown-search-icon,
+#topnav > div:nth-child(2) > form > div > div > button > span > img,
+body > header > div:nth-child(3) > nav > ul > li.list-inline-item.show > div > form > div > div > button > span > img {
     height: 30px;
     transition: all 0.2s ease-in-out
 }
@@ -553,6 +555,7 @@ body > div.container.mb-2 > div:nth-child(2) {
 .thumbs-up img {
     filter: invert(100%);
     padding-right: 1rem;
+    height: 30px;
 }
 
 /* Hero Images */
